Version 2.3.0 - The river knows.
----------
2009-??-??

	freddy77:
		* Various optimizations of memory usage
		* Read files for hashing/sharing using mapped memory
		  (with custom exception handling)
		* Fix download of files > 1GB on ucLibc
		* Fix autogen.sh under Ubuntu
		* Fixed TCP obfuscation negotiation

	Gnucco:
		* Add option to ed2k link parser to display links in emulecollection

	GonoszTopi:
		* Various fixes to new colour code
		* Allow user to select display of transfer rates
		* Extendable list-control settings save/load code
		* Implemented an alternate method to estimate the real user count
		  in the Kad network, which is not based on our local routing table.
		  (port from eMule v0.49b)
		* Dropped assumption that last search keyword is a filename
		  extension if length == 3.
		* Instead of counting unicode characters in a Kad search now we use the
		  UTF-8 byte count to determine whether the keyword is allowed or not.

	Greek:
		* Part number is now an extra column in the download list
		* Improvements to preferences dialogs
		* Redesign skin selection

	jolz:
		* Fixed file locking between ed2k and aMule on Windows

	Kry:
		* Fix indexes after removing GUI items
		* Resolve MSVC compilation problem with separate strings in GUI
		* Fixes to Windows build
		* Allow compilation with wxCocoa
		* Replace Color.h by new class implementation MuleColour
		* Lower class overhead and use two-level cache for pens/brushes
		* Added aMuleCMD project for MSVC.
		* Fixed UnitTests and aMuleCMD in MSVC to use _CONSOLE subsystem.
		* Preferences changes

	lfroen:
		* php prefix for lex/yacc

	LittleAbacus:
		* Search results can now be sorted by "knownness" state.

	marcell:
		* Fixed issue #892: Show data sizes >= 1.0 GB with three digits.
		* Fixed search 'Stop' button not stopping Kad searches.
		* Check Kademlia search results against original criteria.
		* Allow Kademlia searches with repetitive keywords.